syntax = "proto3";

package nuah.nameservice;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nuah/nameservice/params.proto";
import "nuah/nameservice/whois.proto";
import "nuah/nameservice/whois_by_value.proto";

option go_package = "nuah/x/nameservice/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nuah/nameservice/params";
  
  }
  
  // Queries a list of Whois items.
  rpc Whois    (QueryGetWhoisRequest) returns (QueryGetWhoisResponse) {
    option (google.api.http).get = "/nuah/nameservice/whois/{index}";
  
  }
  rpc WhoisAll (QueryAllWhoisRequest) returns (QueryAllWhoisResponse) {
    option (google.api.http).get = "/nuah/nameservice/whois";
  
  }
  
  // Queries a list of WhoisByValue items.
  rpc WhoisByValue    (QueryGetWhoisByValueRequest) returns (QueryGetWhoisByValueResponse) {
    option (google.api.http).get = "/nuah/nameservice/whois_by_value/{index}";
  
  }
  rpc WhoisByValueAll (QueryAllWhoisByValueRequest) returns (QueryAllWhoisByValueResponse) {
    option (google.api.http).get = "/nuah/nameservice/whois_by_value";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetWhoisRequest {
  string index = 1;
}

message QueryGetWhoisResponse {
  Whois whois = 1 [(gogoproto.nullable) = false];
}

message QueryAllWhoisRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllWhoisResponse {
  repeated Whois                                  whois      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetWhoisByValueRequest {
  string index = 1;
}

message QueryGetWhoisByValueResponse {
  WhoisByValue whoisByValue = 1 [(gogoproto.nullable) = false];
}

message QueryAllWhoisByValueRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllWhoisByValueResponse {
  repeated WhoisByValue                           whoisByValue = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination   = 2;
}

